# cutie

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  window.py
app/core/: __init__.py  commands.py  crop_worker.py  export_worker.py  ffmpeg_capabilities.py  ffmpeg_command_builder.py  ffmpeg_errors.py  ffprobe_reader.py  media_info.py  project_references.py  project_state.py  track_ids.py  tracks.py  undo_history.py
app/utils/: logging_config.py  numbers.py  paths.py  timecode.py
app/widgets/: __init__.py  export_dialog.py  playback_controls.py  preview_player.py  trim_timeline.py
packaging/linux/: dev.mce.Cutie.desktop  dev.mce.Cutie.metainfo.xml
tests/: run_backend.py  test_backend.py
